--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -44,7 +44,7 @@
     }
   },
   "sap.ui5": {
-    "flexEnabled": true,
+    "flexEnabled": false,
     "dependencies": {
       "minUI5Version": "1.120.14",
       "libs": {
@@ -95,12 +95,23 @@
           "target": [
             "TargetView1"
           ]
+        },
+        {
+          "name": "RouteFormularioCadastro",
+          "pattern": "ordem/nova",
+          "target": [
+            "TargetFormularioCadastro"
+          ]
         }
       ],
       "targets": {
         "TargetView1": {
           "id": "View1",
           "name": "View1"
+        },
+        "TargetFormularioCadastro": {
+          "id": "FormularioCadastro",
+          "name": "FormularioCadastro"
         }
       }
     },
